2020-04-05  Sam Varshavchik  <mrsam@courier-mta.com>

	* listlayoutmanager/list_element_impl.C: Do not deselect the current
	element when pointer focus is lost.

	* listlayoutmanager/listlayoutstyle.C: Replace empty strings with
	newline chars, so that the list item has non-0 height.

2020-03-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* combobox: fix tooltips in combo-boxes.

	* shortcut: Ignore '${...}' prefixes, for internationalization.

2020-03-29  Sam Varshavchik  <mrsam@courier-mta.com>

	* Border layout manager: implement update_border/update_borders.

	* textlabel_impl.C: Fix metrics calculation bug.

	* create_ok2_cancel_dialog: Add optional keyboard shortcut
	to the 2nd ok button.

2020-03-22  Sam Varshavchik  <mrsam@courier-mta.com>

	* borderlayoutmanager_impl.C: Fix incorrect scratch buffer usage,
	resulting in inefficient scratch buffer operations.

2020-03-21  Sam Varshavchik  <mrsam@courier-mta.com>

	* editor_impl.C: Do not invoke the autocomplete callback in response
	to a backspace or delete.

	* combobox/editable_comboboxlayoutmanager.C: Reset focus after
	combo-box selection is made only if it's because of a key or button
	event.

2020-03-20  Sam Varshavchik  <mrsam@courier-mta.com>

	* combobox/editable_comboboxlayoutmanager: setting the input field
	to one of the values automatically selects it in the combo-box
	dropdown.

	* Implements an IN_THREAD version of set() for validated input
	fields.

	* Removes usage of input_lock with editable combo-boxes, replaced
	by having editable_comboboxlayoutmanager inherit methods that access
	the underlying input field from the widget itself.

0.26

2020-02-16  Sam Varshavchik  <mrsam@courier-mta.com>

	* Using a key/button to select a list item explicitly scrolls it into
	view.

2019-11-30  Sam Varshavchik  <mrsam@courier-mta.com>

	* In standard and editable combo-boxes, rename selection_changed()
	to on_selection_changed(), for consistency. Throw an exception